[package]
name = "ws-actix-web"
version = "0.2.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
keywords = ["ws", "websockets", "actix-web"]
license = "MIT"
description = "Web sockets for actix-web"
repository = "https://github.com/apibillme/ws-actix-web"
readme = "README.md"

[dependencies]
actix-web = "2"
actix = "0.9"
actix-web-actors = "2"
actix-codec = "0.2"
bytes = "0.5"
awc = "1"
futures = "0.3"
